--- a/styles.css
+++ b/styles.css
@@ -16,3 +16,10 @@ h2 {
     font-size: 20px;
     text-align: center;
 }
+
+a {
+    color: #eded24;
+    font-family: Verdana;
+    font-size: 15px;
+}
+
