--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,14 @@ body {
     background-color: #3266a8;
 }
 
-h1 {
+.site-title {
     color: #eded24;
     font-family: Verdana;
     font-size: 45px;
     text-align: center;
 }
 
-h2 {
+.site-sub-title {
     color: #eded24;
     font-family: Verdana;
     font-size: 20px;
@@ -23,3 +23,33 @@ a {
     font-size: 15px;
 }
 
+a:hover {
+  color: hotpink;
+}
+
+.navigation-bar {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+li {
+    color: #eded24;
+    list-style-type: circle;
+    display: inline;
+}
+
+.image-container {
+    display: flex;
+    justify-content: center;
+}
+
+.general-text {
+    color: #eded24;
+    font-family: Verdana;
+    font-size: 15px;
+}
+
+.reverse-b {
+    display: inline-block; 
+    transform: scale(-1, 1);
+   }
